--- a/styles.css
+++ b/styles.css
@@ -1,81 +1,83 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #212121;
-    color: white;
-    flex-direction: column;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-.container {
-    text-align: center;
-}
+        body {
+            font-family: 'Inter', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #0d1117;
+            color: white;
+            flex-direction: column;
+        }
 
-.controls {
-    margin-bottom: 20px;
-}
+        .container {
+            text-align: center;
+        }
 
-label {
-    display: block;
-    margin-top: 10px;
-    color: #576270;
-}
+        .controls {
+            margin-bottom: 20px;
+        }
 
-input[type="range"],
-select {
-    width: 100%;
-    margin-top: 5px;
-}
+        label {
+            display: block;
+            margin-top: 10px;
+            color: #576270;
+        }
 
-.keyboard {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    position: relative;
-}
+        input[type="range"],
+        select {
+            width: 100%;
+            margin-top: 5px;
+        }
 
-.key {
-    width: 40px;
-    height: 120px;
-    margin: 2px;
-    background: white;
-    border: 1px solid #444;
-    border-radius: 4px;
-    position: relative;
-    cursor: pointer;
-}
+        .keyboard {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            position: relative;
+        }
 
-.key.black {
-    width: 28px;
-    height: 80px;
-    background: black;
-    position: absolute;
-    top: 0;
-    z-index: 1;
-}
+        .key {
+            width: 40px;
+            height: 120px;
+            margin: 2px;
+            background: white;
+            border: 1px solid #444;
+            border-radius: 4px;
+            position: relative;
+            cursor: pointer;
+        }
 
-.key.black[data-note="C#"] { left: 30px; }
-.key.black[data-note="D#"] { left: 74px; }
-.key.black[data-note="F#"] { left: 162px; }
-.key.black[data-note="G#"] { left: 206px; }
-.key.black[data-note="A#"] { left: 250px; }
+        .key.black {
+            width: 28px;
+            height: 80px;
+            background: black;
+            position: absolute;
+            top: 0;
+            z-index: 1;
+        }
 
-.key:active {
-    background: #ccc;
-}
+        .key.black[data-note="C#"] { left: 30px; }
+        .key.black[data-note="D#"] { left: 74px; }
+        .key.black[data-note="F#"] { left: 162px; }
+        .key.black[data-note="G#"] { left: 206px; }
+        .key.black[data-note="A#"] { left: 250px; }
 
-.key-label {
-    position: absolute;
-    bottom: 5px;
-    width: 100%;
-    text-align: center;
-    font-size: 12px;
-    color: black;
-}
+        .key:active {
+            background: #ccc;
+        }
 
-.key.black .key-label {
-    color: white;
-}
+        .key-label {
+            position: absolute;
+            bottom: 5px;
+            width: 100%;
+            text-align: center;
+            font-size: 12px;
+            color: black;
+        }
+
+        .key.black .key-label {
+            color: white;
+        }
