--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
+    margin: 20px;
     gap: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 24px;
@@ -55,8 +55,8 @@ body {
     font-size: 24px;
     color: #00E494;
     background-color: transparent;
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 32px;
     border-radius: 15%;
     display: flex;
     justify-content: center;
@@ -76,7 +76,7 @@ body {
     padding: 20px;
     transition: right 0.3s ease;
     z-index: 999;
-    overflow-y: auto; /* Scroll vertical */
+    overflow-y: auto;
 }
 .controls.active {
     right: 0;
@@ -132,7 +132,7 @@ select {
 .key.black[data-note="D#5"] { left: 580px; }
 .key:active,
 .key.active {
-    background: #00E494; /* Color de fondo cuando la tecla está activa */
+    background: #00E494;
 }
 .key-label {
     position: absolute;
@@ -144,13 +144,4 @@ select {
 }
 .key.black .key-label {
     color: white;
-}
-
-.message {
-    color: #576270;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
