--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     z-index: 1000;
     font-size: 24px;
     color: #00E494;
-    background-color: transparent;
+    background-color: #0d1117;
     width: 32px;
     height: 32px;
     border-radius: 15%;
